--- a/CppTutorialsApp.vcxproj-Nazia-ZenBook.filters
+++ b/CppTutorialsApp.vcxproj-Nazia-ZenBook.filters
@@ -66,16 +66,16 @@
     <ClCompile Include="L16_recursiveFunction.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Ascii.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="random.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Matrix.cpp">
+    <ClCompile Include="Ascii.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="NullValue.cpp">
+    <ClCompile Include="randomDatecpp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
